Make sidkick box grey

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -313,6 +313,12 @@ figcaption {
 .heroinfobox table {
   margin: 0;
 }
+.elementNone th, .elementNone .header {
+  background: #bbb;
+}
+.elementNone .heroinfobox {
+  border: 2px solid #bbb;
+}
 .element1 th, .element1 .header {
   background: #f07d75;
 }
