--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -46,14 +46,14 @@ Remove {{ effect.parameter.value }} debuff(s) from {{ target }}
 {% assign turnDefinition = "turn" %}
 Give {{ target }} Taunt. Opponents can target only {{ target }}
 {% when "HealthDamage" %}
-Deal {{ effect.parameter.value }}% -> {{ effect.parameter.value | times: 2 }}% as HP goes from Max to 0
+Deal {{ effect.parameter.value }}% -> {{ effect.parameter.value | times: 2 }}% damage to {{ target }} as HP goes from Max to 0
 {% when "DeleteTurn" %}
 Skip {{ effect.parameter.value }} enemy action(s)
 {% when "Silence" %}
 {% assign turnDefinition = "turn" %}
 {{ target }} cannot use view-costing skills
 {% when "ComboDamage" %}
-Deal {{ effect.parameter.value }}% of damage and {{ effect.parameter.combpMult }}% extra for each combo
+Deal {{ effect.parameter.value }}% of damage to and {{ effect.parameter.combpMult }}% extra for each combo to {{ target }}
 {% when "ElementPenetrateDamage" %}
 ATK {% if effect.parameter.value >= 100 %}Up{% else %}Down{% endif %} to {{ target }} by {{ effect.parameter.value | divided_by: 100.0 }}x against advantageous elements
 {% when "Wait" %}
@@ -80,7 +80,7 @@ Deal {{ effect.parameter.value}}% of damage to {{ target }} + extra ({{ effect.p
 {% when "SpdDeferenceDamage" %}
 Deal {{ effect.parameter.value}}% of damage to {{ target }} + extra {{ effect.parameter.spdMult }}% damage from speed advantage between caster and {{ target }}
 {% when "StatusNumDamage" %}
-Deal {{ effect.parameter.value }}% of damage and {{ effect.parameter.statusMult }}% extra for each opponent's {% if effect.parameter.isGoodStatus == 1 %}buff{% else %}debuff{% endif %}
+Deal {{ effect.parameter.value }}% of damage to {{ target }} and {{ effect.parameter.statusMult }}% extra for each {{ target }}'s {% if effect.parameter.isGoodStatus == 1 %}buff{% else %}debuff{% endif %}
 {% when "SalesBonusCheat" %}
 Ignore business bonus conditions (?)
 {% when "IncreaseLAH" %}
@@ -89,7 +89,7 @@ Gain {{ effect.parameter.value }}% extra gold
 Gain {{ effect.parameter.value }}% extra XP
 {% when "Aggregation" %}
 {% assign turnDefinition = "turn" %}
-Apply Damage Aggregation status to self
+Apply Damage Aggregation status to {{ target }}.
 {% else %}
 Unknown effect class ({{ effect.class }})
 {% endcase %}
