--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -76,7 +76,7 @@ Change skill view cost by {{ effect.parameter.value }} for {{ target }}
 {% when "IgnoreElement" %}
 Make {{ target }} ignore element advantages
 {% when "NowViewDamage" %}
-Deal {{ effect.parameter.value }}% -> 300% of damage to {{ target }} as remaining Views go from 0 to ({{ 300 | minus:effect.parameter.value | divided_by: effect.parameter.viewMult }} * total ally Base View)
+Deal {{ effect.parameter.value }}% -> {{ effect.parameter.value | times:2 }}% of damage to {{ target }} as remaining Views go from 0 to ({{ effect.parameter.value | divided_by: effect.parameter.viewMult }} * total ally Base View)
 {% when "SpdDeferenceDamage" %}
 Deal {{ effect.parameter.value }}% of damage to {{ target }} + extra {{ effect.parameter.spdMult }}% damage from speed advantage between caster and {{ target }}
 {% when "StatusNumDamage" %}
