Mass rename heroes to charas

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
         <h3 class="section__header">Catalogs</h3>
         <ul>
           <li>
-            <a href="/heroes/">Heroes</a>
+            <a href="/charas/">Characters</a>
           </li>
         </ul>
         <h3 class="section__header">Tools</h3>
