--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -2,7 +2,11 @@
 
 {% assign firstCardInfo = cardInfos | first %}
 
+{% if firstCardInfo.resourceName == "player" %}
+{% capture artwork_cond %}item.path contains "fg_player"{% endcapture %}
+{% else %}
 {% capture artwork_cond %}item.path contains "fg_{{ firstCardInfo.resourceName }}_s"{% endcapture %}
+{% endif %}
 {% assign artworks = site.static_files | where: "hero_sprites", true | where_exp: "item", artwork_cond | map: "path" %}
 
 <div class="elementNone">
