--- a/_includes/hero-infobox2.html
+++ b/_includes/hero-infobox2.html
@@ -2,8 +2,8 @@
 
 {% assign firstCardInfo = cardInfos | first %}
 
-{% capture artwork_cond %}item.path contains "fg_{{ firstCardInfo.resourceName }}_h"{% endcapture %}
-{% assign artworks = site.static_files | where: "hero_sprites", true | where_exp: "item", artwork_cond | map: "path" %}
+{% capture artwork_cond %}item.fg == true and item.path contains "fg_{{ firstCardInfo.resourceName }}_h"{% endcapture %}
+{% assign artworks = site.static_files | where_exp: "item", artwork_cond | map: "path" %}
 
 <div class="element{{ firstCardInfo.element }}">
     <div class="heroinfobox">
