--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -1,39 +1,73 @@
-{% capture artwork_cond %}item.path contains "{{ include.sprite_prefix }}"{% endcapture %}
+{% assign cardInfos = site.data.CardMaster | where: "stockId", include.stockId %}
+
+{% assign firstCardInfo = cardInfos | first %}
+
+{% capture artwork_cond %}item.path contains "fg_{{ firstCardInfo.resourceName }}_h"{% endcapture %}
 {% assign artworks = site.static_files | where: "fg", true | where_exp: "item", artwork_cond | map: "path" %}
 
-<div class="heroBox">
-    <!--<div class="tabs"><span class="selected" data-id="0" data-voice="nekros2"
-            style="background-color: rgb(229, 204, 255);">Traveling Sorcerer</span><span class="" data-id="1"
-            data-voice="nekros">Lifeless Emperor</span></div>-->
-    <div class="hero0 nether">
+<div class="element{{ firstCardInfo.element }}">
+    <div class="heroinfobox">
         <div class="header">
-            <td class="caption">
-                <div class="name">{{ include.name }}</div>
-                <div class="sub">{{ include.jp_name }}</div>
-            </td>
+            <div class="name">{{ page.name }}</div>
+            <div class="sub">{{ firstCardInfo.cardName }}</div>
         </div>
         {% include hero-infobox-gallery.html artworks=artworks %}
-        <div class="body">
-            <table>
-                <tbody>
-                    <tr>
-                        <th>Illustration</th>
-                        <td>{{ include.illustrator }}</td>
-                    </tr>
-                    <tr>
-                        <th>Voice</th>
-                        <td>{{ include.voice_actor }}</td>
-                    </tr>
-                    <tr>
-                        <th>Race</th>
-                        <td>{{ include.race }}</td>
-                    </tr>
-                    <tr>
-                        <th>Occupation</th>
-                        <td>{{ include.occupation }}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <table>
+            <tbody>
+                <tr>
+                    <th>Attribute</th>
+                    <td>{% include hero-element.html element=firstCardInfo.element %}</td>
+                    <th>Role</th>
+                    <td>{% include hero-role.html role=firstCardInfo.role %}</td>
+                </tr>
+                <tr>
+                    <th colspan="2">Illustration</th>
+                    <td colspan="2">{{ firstCardInfo.illustrator }}</td>
+                </tr>
+                <tr>
+                    <th colspan="2">Voice</th>
+                    <td colspan="2">{{ firstCardInfo.characterVoice }}</td>
+                </tr>
+                <tr>
+                    <th colspan="2">Occupation</th>
+                    <td colspan="2">{{ firstCardInfo.job }}</td>
+                </tr>
+                <tr>
+                    <th colspan="2">Affliation office</th>
+                    <td colspan="2">{{ firstCardInfo.affiliationOffice }}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
+
+{% assign skillIds = firstCardInfo.skillIds %}
+{% for cardInfo in cardInfos %}
+{% unless forloop.first %}
+{% for id in cardInfo.skillIds %}
+{% unless skillIds contains id %}{% assign skillIds = skillIds | push: id %}{% endunless %}
+{% endfor %}
+{% endunless %}
+{% endfor %}
+<h2>Stats</h2>
+{% for cardInfo in cardInfos %}
+<div class="hero{{ cardInfo.rarity }}">
+    <h3>{{ cardInfo.rarity }} ☆</h3>
+    <table>
+        <tr>
+            <th>Level</th><th>HP</th><th>ATK</th><th>SPD</th><th>View</th>
+        </tr>
+        {% for growth in cardInfo.growths %}
+        <tr>
+            <td>{{ growth.level }}</td><td>{{ growth.hp }}</td><td>{{ growth.attack }}</td><td>{{ growth.agility }}</td><td>{{ growth.addView }}</td>
+        </tr>
+        {% assign maxLevel = cardInfo.rarity | times: 10 %}
+        {% if growth.level == maxLevel %}{% break %}{% endif %}
+        {% endfor %}
+    </table>
+</div>
+{% endfor %}
+
+<h2>Skills</h2>
+
+{% include skill-table.html skillIds=skillIds %}
 </div>
