Add empty guide pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,43 @@
         <h3 class="section__header">Basic Information</h3>
         <ul>
           <li>
-            <a href="/gameplay/">Gameplay</a>
+            <a href="/guide/">Gameplay</a>
+          </li>
+          <li>
+            <a href="/guide/user_rank/">Stamina and User Rank</a>
+          </li>
+          <li>
+            <a href="/guide/quest/">Quest</a>
+          </li>
+          <li>
+            <a href="/guide/battle">Battle</a>
+          </li>
+          <li>
+            <a href="/guide/hero/">Hero</a>
+          </li>
+          <li>
+            <a href="/guide/sidekick/">Sidekick</a>
+          </li>
+          <li>
+            <a href="/guide/quest_scenario/">Quest Scenario</a>
+          </li>
+          <li>
+            <a href="/guide/sale/">Sale</a>
+          </li>
+          <li>
+            <a href="/guide/training">Training</a>
+          </li>
+          <li>
+            <a href="/guide/gacha/">Gacha</a>
+          </li>
+          <li>
+            <a href="/guide/shop/">Shop</a>
+          </li>
+          <li>
+            <a href="/guide/login_bonus">Login Bonus</a>
+          </li>
+          <li>
+            <a href="/guide/mission/">Mission</a>
           </li>
         </ul>
         <h3 class="section__header">Catalogs</h3>
