--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -37,7 +37,21 @@
             </tbody>
         </table>
     </div>
-    
+
+{% assign detail_prefix = firstCardInfo.resourceName | upcase | prepend: "DETAIL_" %}
+{% assign bio_s01 = detail_prefix | append: "_S01" %}
+<button class="accordion-button">Personal Data</button>
+<div class="accordion-panel">
+<p>{{ site.data.processed.jp_bio[bio_s01] }}</p>
+</div>
+{% if include.BIO_S01 %}
+<button class="accordion-button">Personal Data (Translated)</button>
+<div class="accordion-panel">
+<p>{{ include.BIO_S01 }}</p>
+</div>
+{% endif %}
+
+
 {% assign skillIdsActive = firstCardInfo.skillIds %}
 {% for cardInfo in cardInfos %}
 {% unless forloop.first %}
