Add translated tag

--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -47,7 +47,7 @@
 <p>{{ site.data.processed.jp_bio[bio_h01] }}</p>
 </div>
 {% if include.BIO_H01 %}
-<button class="accordion-button">Personal Data</button>
+<button class="accordion-button">Personal Data 1 (Translated)</button>
 <div class="accordion-panel">
 <p>{{ include.BIO_H01 }}</p>
 </div>
@@ -59,7 +59,7 @@
 <p>{{ site.data.processed.jp_bio[bio_h02] }}</p>
 </div>
 {% if include.BIO_H02 %}
-<button class="accordion-button">Personal Data</button>
+<button class="accordion-button">Personal Data 2 (Translated)</button>
 <div class="accordion-panel">
 <p>{{ include.BIO_H02 }}</p>
 </div>
