--- a/_includes/skill-timing.html
+++ b/_includes/skill-timing.html
@@ -9,7 +9,7 @@ action start
 action end
 {% comment %}4, 5 , 6 (no skills with such timing){% endcomment %}
 {% when 7 %}
-when attacking
+when attack causes target's HP goes below 50%
 {% when 8 %}
 when taking damage
 {% comment %}9 (no skills with such timing){% endcomment %}
