--- a/_includes/skill-timing.html
+++ b/_includes/skill-timing.html
@@ -9,7 +9,7 @@ Action start
 Action end
 {% comment %}4, 5, 6 (no skills with such timing){% endcomment %}
 {% when 7 %}
-After own cloth-tearing attack
+After own attack puts enemy at <50% HP
 {% when 8 %}
 When taking damage
 {% comment %}9 (no skills with such timing){% endcomment %}
